--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <!-- Change the following strings as required -->
     <string name="back4app_app_id">uziJkylN4cvyxXode4LsvI1afr9gOug1YCrtuPBS</string>
     <string name="back4app_client_key">GOoCOuO13bEaOi6A5QMEGvrVkXyvAAQxhBgwzoVm</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
